Release notes
=============
These notes describe the Java reference implementation of the Fudge Messaging encoding system.

For more information about the project, please see
   http://www.fudgemsg.org/
   
This software is licensed under the Apache Public License, version 2.0.
For more information, please see the LICENSE.txt file contained in
this distribution.

Version 0.4
===========
This release contains major API changes.
The aim is to get as many breaking changes out of the way now.
The wire protocol is unchanged.

- Move code to new package structure.
  This minimizes the classes in the top package to avoid overwhelming users with
  low-level knowledge at first glance

- Create FudgeWireType
  Move wire types to new package under new superclass
  This allows certain places in the API to specifically require a wire type

- Add EncodedFudgeMsg

- Changed IndicatorType from singleton to enum singleton

- Move API to using Integer rather than Short for ordinals

- Unify all methods on name-ordinal-type-value argument ordering

- Rename classes
   FudgeMessageFactory to FudgeMsgFactory
   FudgeMsg to StandardFudgeMsg
   FudgeMsgBase to AbstractFudgeMsg
   FudgeFieldContainer to FudgeMsg
   MutableFudgeFieldContainer to MutableFudgeMsg
   FudgeMsgField to UnmodifiableFudgeField
   ImmutableFudgeMsg to UnmodifiableFudgeMsg
   ImmutableFudgeContext to UnmodifiableFudgeContext
   ImmutableFudgeTypeDictionary to UnmodifiableFudgeTypeDictionary

- Remove classes
   ImmutableFudgeFieldContainer

- Change constructors
   UnmodifiableFudgeMsg (parameter order)
   UnmodifiableFudgeField (use factories)

- Rename methods
   FudgeSerializationContext.objectToFudgeMsg* -> addToMessage*
